--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,21 +7,11 @@
 
     <TextView
             android:text="@string/chat_room"
-            android:layout_width="204dp"
-            android:layout_height="54dp" android:id="@+id/splashScreenText"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="36sp" android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:layout_width="232dp"
+            android:layout_height="60dp" android:id="@+id/splashScreenText"
+            android:textSize="40sp" android:textAppearance="@style/TextAppearance.AppCompat.Display4"
             android:fontFamily="@font/montserrat" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginBottom="420dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="257dp"/>
-    <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressBar"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="43dp"
-            app:layout_constraintTop_toBottomOf="@+id/splashScreenText" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="259dp"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="288dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="383dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
